--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <script src="js/note-list-view-model.js"></script>
 <script src="js/note-list-view-model.js"></script>
 <script src="js/note-controller.js"></script>
+<script src="js/single-note-view.js"></script>
 </body>
 </html>
