--- a/specRunner.html
+++ b/specRunner.html
@@ -12,11 +12,13 @@
   <script src="js/note-list-model.js"></script>
   <script src="js/note-list-view-model.js"></script>
   <script src="js/note-controller.js"></script>
+  <script src="js/single-note-view.js"></script>
   <script src="spec/testing-library.js"></script>
   <script src="spec/note-model-test.js"></script>
   <script src="spec/note-list-model-test.js"></script>
   <script src="spec/note-list-view-model-test.js"></script>
   <script src="spec/note-controller-test.js"></script>
+  <script src="spec/single-note-view-test.js"></script>
 
 </body>
 </html>
