--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div id="app">Hello</div>
+  <div id="note"></div>
   
 <script src="js/note-model.js"></script>
 <script src="js/note-list-model.js"></script>
